# tensorguard_v2

./: .gitignore  CONSTANTS.md  Cargo.toml  HOW_TO_RUN.md  README.md  REMAINING.md  constants.txt  demo.js  demo_full.js  demo_full_fixed.js  guard_verify.js  heartbeat.js  initialize.js  package-lock.json  package.json  post_aggregated.js  post_aggregated_attack.js  scanner.js  tests.js
crates/coordinator/: Cargo.toml
crates/coordinator/src/: aggregator.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/detector/: threshold.rs
crates/core/src/tensor/: kolmogorov.rs  lyapunov.rs  mod.rs  ricci.rs  state.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: attestation.rs  config.rs  heartbeat.rs  main.rs  mempool.rs  monitor.rs  predictor.rs
crates/multisig/: Cargo.toml
crates/multisig/examples/: keygen.rs
crates/multisig/src/: keys.rs  lib.rs  message.rs  protocol.rs
crates/solana/: Cargo.toml
programs/: Anchor.toml  Cargo.toml
programs/tensorguard/: Cargo.toml
programs/tensorguard/src/: errors.rs  lib.rs  state.rs
programs/tensorguard/src/instructions/: guard_verify.rs  heartbeat.rs  initialize.rs  manage_signers.rs  mod.rs  post_aggregated.rs  submit_vote.rs
